Removendo z-index para corrigir bug do link para pagina de contato

--- a/assets/css/base/base.css
+++ b/assets/css/base/base.css
@@ -40,6 +40,8 @@
         url(../../img/vetor-topo.svg);
     background-position: top left;
     background-repeat: no-repeat;
+
+    z-index: -1;
 }
 
 .logo {
