--- a/assets/css/componentes/animais.css
+++ b/assets/css/componentes/animais.css
@@ -11,7 +11,6 @@
     text-align: center;
     display: flex;
     justify-content: center;
-    z-index: -1;
 }
 
 .animal__imagem {
