--- a/assets/css/componentes/cabecalho.css
+++ b/assets/css/componentes/cabecalho.css
@@ -1,6 +1,5 @@
 .cabecalho {
     padding: 3.125rem 3rem 5.437rem;
-    z-index: 1;
 }
 
 .cabecalho__logo {
